--- a/demo/src/main/res/values/styles.xml
+++ b/demo/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
     <style name="BGA" />
 
-    <style name="BGA.Theme" parent="@android:style/Theme.Light.NoTitleBar">
+    <style name="BGA.Theme" parent="Theme.AppCompat.Light.DarkActionBar">
     </style>
 
     <style name="BGA.Theme.Translucent">
